--- a/canvas.html
+++ b/canvas.html
@@ -29,7 +29,10 @@
     window.addEventListener('keyup', sizePen, false);
     window.addEventListener('change', pickColor, false);
     window.addEventListener('keyup', clearCanvas, false);
-    window.addEventListener('orientationchange', clearCanvas, false);
+    window.addEventListener('orientationchange', function(){
+      clearCanvas();
+      sizeCanvas();
+    });
     window.addEventListener('orientationchange', sizeCanvas, false);
 
     function draw(e){
