--- a/canvas.html
+++ b/canvas.html
@@ -29,11 +29,7 @@
     window.addEventListener('keyup', sizePen, false);
     window.addEventListener('change', pickColor, false);
     window.addEventListener('keyup', clearCanvas, false);
-    window.addEventListener('orientationchange', function(){
-      clearCanvas();
-      sizeCanvas();
-    });
-    window.addEventListener('orientationchange', sizeCanvas, false);
+    window.addEventListener('orientationchange', orientCanvas, false);
 
     function draw(e){
         var pageX=e.pageX;
@@ -86,6 +82,11 @@
     function sizeCanvas(e){
       c.width=window.innerWidth * 0.80;
       c.height=window.innerHeight * 0.80;
+    }
+
+    function orientCanvas(e){
+      clearCanvas();
+      sizeCanvas();
     }
   </script>
 
