--- a/canvas.html
+++ b/canvas.html
@@ -20,7 +20,7 @@
     var c = document.getElementById("myCanvas");
     var ctx = c.getContext("2d");
     var color="red";
-    var size=1;
+    var size=5;
     c.width=window.innerWidth * 0.80;
     c.height=window.innerHeight * 0.80;
     c.addEventListener('mousemove', draw, false);
@@ -31,16 +31,20 @@
     window.addEventListener('keyup', clearCanvas, false);
     window.addEventListener('orientationchange', orientCanvas, false);
 
+    //draws a circle
     function draw(e){
         var pageX=e.pageX;
         var pageY=e.pageY;
         ctx.strokeStyle=color;
+        ctx.fillStyle=color;
         ctx.lineWidth=size;
         ctx.beginPath();
-        ctx.arc(pageX, pageY, 50, 0, Math.PI/2, 0);
+        ctx.arc(pageX, pageY, size, 0, 2*Math.PI, 0);
         ctx.stroke();
+        ctx.fill();
     }
 
+    //allows for color change on b, g, r, y
     function checkKey(e){
       // if pressing b
       if (e.keyCode=="66"){
@@ -60,10 +64,12 @@
       }
     }
 
+    //allows for color change on color picker
     function pickColor(e) {
       color=document.getElementById('bg').value;
     }
 
+    //allows for pen size change on up and down arrow keys
     function sizePen(e){
       // if pressing down arrow
       if (e.keyCode=="40" && size>1){
@@ -74,15 +80,20 @@
       }
     }
 
+    //clears canvas on space bar
     function clearCanvas(e){
       if (e.keyCode=="32"){
         ctx.clearRect(0, 0, c.width, c.height);
       }
     }
+
+    //resizes canvas to be 80% of window size
     function sizeCanvas(e){
       c.width=window.innerWidth * 0.80;
       c.height=window.innerHeight * 0.80;
     }
+
+    //reloads page to achieve clear and resize on orientation change
     function orientCanvas(e){
       window.location.reload();
     }
